syntax = "proto3";

package proto;

service ShardKV{
  rpc Put(PutRequest) returns (PutReply);
  rpc Append(AppendRequest) returns (AppendReply);
  rpc Delete(DeleteRequest) returns (DeleteReply);
  rpc Get(GetRequest) returns (GetReply);
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutReply {

}

message AppendRequest {
  string key = 1;
  string value = 2;
}

message AppendReply {

}

message DeleteRequest {
  string key = 1;
}

message DeleteReply {

}

message GetRequest {
  string key = 1;
}

message GetReply {
  string value = 1;
}
